Mais alguns testes corrigidos.